# Draconic-Vibe-Crystal

./: Cargo.toml
dvc/: Cargo.toml
dvc-local/command/: cn.txt  de.txt  en.txt  es.txt  fr.txt  it.txt  ja.txt  kr.txt  tw.txt
dvc-local/config/: en.txt
dvc-local/god/: en.txt  fr.txt  ja.txt
dvc-local/src/: language.rs  localizer.rs
dvc/data/: shuffle  talk_swap
dvc/data/config/: en.txt
dvc/data/text_swaps/: en.txt  es.txt  fr.txt
dvc/src/: assets.rs  autolevel.rs  config.rs  continuous.rs  deployment.rs  enums.rs  events.rs  ironman.rs  lib.rs  menus.rs  message.rs  misc.rs  randomizer.rs  script.rs  sprite.rs  talk.rs  utils.rs
dvc/src/assets/: accessory.rs  animation.rs  color.rs  data.rs  dress.rs  emblem.rs  engage_attack.rs  gmap.rs  transform.rs
dvc/src/assets/data/: item.rs  search.rs
dvc/src/assets/data/data/: icon.txt
dvc/src/autolevel/: enemy.rs
dvc/src/config/: flags.rs  menu.rs  variables.rs
dvc/src/config/menu/: items.rs  kind.rs  text.rs
dvc/src/config/menu/items/: custom.rs
dvc/src/config/menu/kind/: command.rs  order.rs  submenu.rs
dvc/src/continuous/: postchapter.rs  random.rs  sortie.rs
dvc/src/deployment/: DVC.fdp  fulldeploy.rs  sortie.rs
dvc/src/menus/: dialog.rs  ingame.rs
dvc/src/message/: aliases  gender_swap.txt  item.txt  label_swap.txt  original.rs  swap.rs  swap_command.rs  swap_kinds.rs  talk.rs
dvc/src/procs/: eventdemo.rs  gmapsequence.rs  hubsequence.rs  mainsequence.rs  mapsequence.rs  mod.rs  summon.rs  unitgrow.rs
dvc/src/randomizer/: bgm.rs  blacklist.rs  data.rs  emblem.rs  grow.rs  interact.rs  item.rs  job.rs  latertalk.rs  map.rs  names.rs  person.rs  skill.rs  status.rs  styles.rs  terrain.rs
dvc/src/randomizer/data/: bondring.rs  emblem.rs  items.rs  job.rs  person.rs  restrict.txt  skill.rs
dvc/src/randomizer/data/emblem/: aptitude.rs  enemy.rs  engage_attacks.rs  item.rs  sync.rs
dvc/src/randomizer/emblem/: engrave.rs  menu.rs
dvc/src/randomizer/item/: data.rs  hub.rs  shop.rs  unit_items.rs  well.rs
dvc/src/randomizer/job/: chaos.rs  lockout.rs  reclass.rs  single.rs
dvc/src/randomizer/map/: dispos.rs  effects.rs  shuffle.rs
dvc/src/randomizer/person/: ai.rs  hub.rs  persons.txt  unit.rs
dvc/src/randomizer/skill/: learn.rs
dvc/src/randomizer/terrain/: fow.rs
dvc/src/script/: chapter.rs  common.rs
dvc/src/sprite/: ring_select.rs  telop.rs
src/: asset.rs  assets.rs  autolevel.rs  bgm.rs  config.rs  continuous.rs  deploy.rs  deployment.rs  emblem.rs  enums.rs  event.rs  events.rs  grow.rs  ironman.rs  item.rs  lib.rs  menus.rs  message.rs  misc.rs  person.rs  random.rs  randomizer.rs  script.rs  shop.rs  skill.rs  sprite.rs  talk.rs  utils.rs
src/assets/: accessory.rs  accmenu.rs  animation.rs  bust.rs  conditions.rs  data.rs  dress.rs  emblem.rs  transform.rs
src/autolevel/: enemy.rs  menu.rs  revival.rs
src/continuous/: postchapter.rs  random.rs  sortie.rs
src/deployment/: DVC.fdp  fulldeploy.rs  inspectors.rs  shuffle  shuffle.rs  sortie.rs
src/emblem/: emblem_item.rs  emblem_skill.rs
src/menus/: buildattr.rs  global.rs  ingame.rs  menuitem.rs  submenu.rs  utils.rs
src/randomizer/: assets.rs  battle_styles.rs  bgm.rs  emblem.rs  grow.rs  interact.rs  item.rs  job.rs  map.rs  names.rs  person.rs  skill.rs  status.rs  styles.rs  terrain.rs
(+58 files in other folders)
