[package]
name = "skill"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
unity = { version="0.3.0", git = "https://github.com/DivineDragonFanClub/unity" }
engage = { version="0.6.1", git = "https://github.com/DivineDragonFanClub/engage"}
cobapi = { version = "0.3.0", git = "https://github.com/DivineDragonFanClub/cobapi" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"

[patch."https://github.com/DivineDragonFanClub/engage"]
engage = {path = "/Users/trile/Project/lib/engage"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 1